Updated OG images for kincommunity.html

--- a/kincommunity.html
+++ b/kincommunity.html
@@ -33,19 +33,19 @@
 		</script>
 
 	<!-- Meta Description (for SEO) -->
-	<title>The Kin Community Connection | OFiDCrypt</title>
+	<title>ONE Kin Community | OFiDCrypt</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta name="description"
-		content="Join the Kin community to share experiences and learn about their project, vision and values.">
+		content="Join the ONE Kin community to share experiences and learn about their project, vision and values.">
 	<meta name="keywords" content="cryptocurrency, Kin, blockchain, digital assets, OFiDCrypt, crypto community">
 	<meta name="author" content="Tokin ⬢">
 
 	<!-- Open Graph Meta Tags -->
 	<meta property="og:title" content="The Kin Community Connection | OFiDCrypt">
 	<meta property="og:description"
-		content="Join the Kin community to share experiences and learn about their project, vision and values.">
-	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-community-lowres.webp">
+		content="Join the ONE Kin community to share experiences and learn about their project, vision and values.">
+	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-onekin-community-lowres.webp">
 	<meta property="og:url" content="https://www.ofidcrypt.com/kincommunity">
 	<meta property="og:type" content="website">
 
@@ -53,8 +53,8 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="The Kin Community Connection | OFiDCrypt">
 	<meta name="twitter:description"
-		content="Join the Kin community to share experiences and learn about their project, vision and values.">
-	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-community-lowres.webp">
+		content="Join the ONE Kin community to share experiences and learn about their project, vision and values.">
+	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-onekin-community-lowres.webp">
 	<meta name="twitter:url" content="https://www.ofidcrypt.com/kincommunity">
 
 	<!-- Default ICO file with multiple sizes -->
