Minor updates, text changes and image updated for bouncy-buy on index.html

--- a/explore/app-featured-hvr.html
+++ b/explore/app-featured-hvr.html
@@ -41,7 +41,7 @@
 	<meta name="description"
 		content="We collaborate with trusted developers to deliver unique Web3 experiences through innovative apps, rewarding users with tokens that hold real-world value for trying them out!">
 	<meta name="keywords" content="cryptocurrency, web3, apps, rewards, bouncy ball, eXPB, OFiDCrypt, crypto community">
-	<meta name="author" content="Tokin ⬢">
+	<meta name="author" content="Tokin">
 	
 	<!-- Open Graph Meta Tags -->
 	<meta property="og:title" content="Explore Featured Applications | OFiDCrypt Rewards">
@@ -95,7 +95,7 @@
 			<!-- Header Subpage-->
 			<header class="header-subpage">
 				<a href="../index">
-					<img src="../assets/images/logo01.png" alt="OFiDCrypt Logo" class="logo">
+					<img src="../assets/images/logo03.PNG" alt="OFiDCrypt Logo" class="logo">
 				</a>
 			</header>
 	
