--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 												href="https://phantom.com/download">Download</a></button>
 									</div>
 								</article>
-								<article class="quick-start-item"> <span class="image left"><img src="/assets/images/expb-ball.png"
+								<article class="quick-start-item"> <span class="image left"><img src="/assets/images/expb-ball02.GIF"
 											alt="eXPB Icon"></span>
 											<div class="quick-start-content">
 												<h3 class="quick-start-title">Get Bouncy Ball</h3>
