--- a/kincommunity.html
+++ b/kincommunity.html
@@ -39,7 +39,7 @@
 	<meta name="description"
 		content="Join the ONE Kin community to share experiences and learn about their project, vision and values.">
 	<meta name="keywords" content="cryptocurrency, Kin, blockchain, digital assets, OFiDCrypt, crypto community">
-	<meta name="author" content="Tokin ⬢">
+	<meta name="author" content="Tokin">
 
 	<!-- Open Graph Meta Tags -->
 	<meta property="og:title" content="The Kin Community Connection | OFiDCrypt">
@@ -378,7 +378,7 @@
 						<h2>Kin Update<br />
 							Archive</h2>
 						<p>Research our <a href="#pagination-controls-top">Library of Kin News</a>
-							written and published by the owner of the Kin Community Telegram.
+							written and published by community contributors.
 						</p>
 					</header>
 					<div id="community-featured-image" class="image main">
