--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<!-- Intro -->
 				<div id="intro">
 					<h1 class="left-aligned">
-						<span class="smaller-heading">A Simple Start</span><br />
+						<span class="smaller-heading">A Starter Portfolio</span><br />
 						One Token<br />
 						One Wallet
 					</h1>
@@ -109,7 +109,7 @@
 					</div>
 					<div>
 						<h1 class="left-aligned">Web3 Discovery<br />
-							<span class="smaller-heading-bottom">With Rewards</span></h1>
+							<span class="smaller-heading-bottom">And Marketing</span></h1>
 					</div>
 				
 					<div id="custom-subheading">
@@ -217,7 +217,7 @@
 						<!-- Quick Start Section -->
 						<section class="quick-start-section">
 							<header id="jump-ahead">
-								<h2>Jump Ahead with e𝕏P Web3™</h2>
+								<h2>Jump Ahead amd Create a Simple e𝕏P Starter Portfolio on Solana</h2>
 
 								<p>Get started with <b>Phantom Wallet</b> to Buy <b>Solana</b> and Swap for <b>e𝕏PB Bouncy Ball</b> in Minutes!</a></p>
 							</header>
