--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<!-- Intro -->
 				<div id="intro">
 					<h1 class="left-aligned">
-						<span class="smaller-heading">A<br />Simple Portfolio</span><br />
+						<span class="smaller-heading">A Simple<br />Portfolio</span><br />
 						One Token<br />
 						One Wallet
 					</h1>
@@ -211,15 +211,15 @@
 
 								</section>
 
-								<p class="align-center">To fast-track and get started with a portfolio, please review our <a href="#Guide">Phantom Wallet Guide</a></p>
+								<p class="align-center">Fast-track and get started with a portfolio below, or review our <a href="#Guide">Phantom Wallet Guide</a>for assistance.</p>
 							</header>
 					
 						<!-- Quick Start Section -->
 						<section class="quick-start-section">
 							<header id="jump-ahead">
-								<h2>Jump Ahead and Create your e𝕏P Starter Portfolio</h2>
+								<h2>Jump Ahead and Create your e𝕏P Starter Wallet</h2>
 
-								<p>Get started with <b>Phantom Wallet</b> to Buy <b>Solana</b> and Swap for <b>e𝕏PB Bouncy Ball</b> in Minutes!</a></p>
+								<p>Download <b>Phantom Wallet</b> to Buy <b>Solana</b> and Swap for <b>e𝕏PB Bouncy Ball</b> in Minutes!</a></p>
 							</header>
 
 							<div class="quick-start-items">
