--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
 								</section>
 
-								<p class="align-center">Fast-track and get started with a portfolio below, or review our <a href="#Guide">Phantom Wallet Guide</a>for assistance.</p>
+								<p class="align-center">Fast-track and get started with a portfolio below or review our <a href="#Guide">Phantom Wallet Guide</a> for assistance.</p>
 							</header>
 					
 						<!-- Quick Start Section -->
@@ -219,7 +219,7 @@
 							<header id="jump-ahead">
 								<h2>Jump Ahead and Create your e𝕏P Starter Wallet</h2>
 
-								<p>Download <b>Phantom Wallet</b> to Buy <b>Solana</b> and Swap for <b>e𝕏PB Bouncy Ball</b> in Minutes!</a></p>
+								<p>Download <b>Phantom</b> to Buy <b>Solana</b> and Swap for <b>e𝕏PB Bouncy Ball</b> in Minutes!</a></p>
 							</header>
 
 							<div class="quick-start-items">
