Updated token links on DEXScreener and JUP post-graduation.

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 												<h3 class="quick-start-title">Get Bouncy Ball</h3>
 												<p class="align-center">e𝕏PB · On Solana <br />
 													In Your Wallet</p>
-												<button class="round-button"><a href="https://dexscreener.com/solana/4Kf9mFXh7mksX3vSV8Cy2xRW8iRKwHgz3cqCGPk58XkH">Go to Merchant</a></button>
+												<button class="round-button"><a href="https://jup.ag/tokens/GsKuLQsKCEnfQxuk4icTEQjc11Av8WiqW31CxZqZpump">Go to Merchant</a></button>
 											</div>
 								</article>
 								<article class="quick-start-item"> <span class="image left"><img src="/assets/images/expb-learn.png"
