Updated footer quick link to Token Page and some alterations for consistency to ofidkid.html and meta page descriptions, including robots.txt

--- a/bouncyball.html
+++ b/bouncyball.html
@@ -33,7 +33,7 @@
 		</script>
 
 	<!-- Meta Description (for SEO) -->
-	<title>e𝕏PB Chart DEX Screener | OFiDCrypt</title>
+	<title>e𝕏PB Bouncy Ball | OFiDCrypt</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta name="description" content="Tune in to OFiDCrypt to check the price of the e𝕏PB Token.">
@@ -41,10 +41,10 @@
 	<meta name="author" content="Tokin ⬢">
 
 	<!-- Open Graph Meta Tags -->
-	<meta property="og:title" content="e𝕏PB Chart DEX Screener | OFiDCrypt">
+	<meta property="og:title" content="e𝕏PB Bouncy Ball | OFiDCrypt">
 	<meta property="og:description" content="Tune in to OFiDCrypt to check the price of the e𝕏PB Token.">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
-	<meta property="og:url" content="https://www.ofidcrypt.com/chart">
+	<meta property="og:url" content="https://www.ofidcrypt.com/bouncyball">
 	<meta property="og:type" content="website">
 
 	<!-- Twitter Card Meta Tags -->
@@ -52,7 +52,7 @@
 	<meta name="twitter:title" content="e𝕏PB Chart DEX Screener | OFiDCrypt">
 	<meta name="twitter:description" content="Tune in to OFiDCrypt to check the price of the e𝕏PB Token.">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
-	<meta name="twitter:url" content="https://www.ofidcrypt.com/chart">
+	<meta name="twitter:url" content="https://www.ofidcrypt.com/bouncyball">
 
 	<!-- Default ICO file with multiple sizes -->
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -64,7 +64,7 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
 	<!-- Canonical Preferred URL -->
-	<link rel="canonical" href="https://www.ofidcrypt.com/chart">
+	<link rel="canonical" href="https://www.ofidcrypt.com/bouncyball">
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="/assets/css/main.css">
@@ -263,7 +263,7 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li><a href="/community.html">Community</a></li>
+				<li><a href="/bouncyball.html">Token</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
 				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/pages/about.html">About</a></li>
