--- a/community.html
+++ b/community.html
@@ -250,7 +250,7 @@
 								<h3>You Need A Wallet</h3>
 								<p>Phantom Wallet is a user-friendly cryptocurrency wallet designed for simplicity and
 									speed. It allows you to manage your digital assets without the need for registration, 
-									making it <a href="https://www.ofidcrypt.com/#Guide">quick to set up</a> 
+									making it <a href="https://www.ofidcrypt.com/#guide">quick to set up</a> 
 									and easy to use!</p>
 							</div>
 							<button class="scroll-arrow right" aria-label="Scroll Right"><i
@@ -624,7 +624,7 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li><a href="/community.html">Community</a></li>
+				<li><a href="/bouncyball.html">Token</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
 				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/pages/about.html">About</a></li>
