--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -299,7 +299,7 @@
 				<!-- Copyright -->
 				<div id="copyright">
 					<ul>
-						<li><a href="../community.html">Community</a></li>
+						<li><a href="../bouncyball.html">Token</a></li>
 						<li><a href="../docs/main.html">Docs</a></li>
 						<li><a href="affiliate.html">Partners</a></li>
 						<li><a href="about.html">About</a></li></ul>
