--- a/kincommunity.html
+++ b/kincommunity.html
@@ -585,7 +585,7 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li><a href="/community.html">Community</a></li>
+				<li><a href="/bouncyball.html">Token</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
 				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/pages/about.html">About</a></li>
