--- a/ofidkid.html
+++ b/ofidkid.html
@@ -335,32 +335,41 @@
 				</article>
 
 				<!-- Community Links Table -->
-			<section class="community-links">
-				<table>
-					<!-- Ad Banner -->
-					<section id="expb-ball" class="ad-banner">
-						<div style="text-align: center;">
-							<!-- <a href="#" style="border-bottom: none;"> -->
-							<img src="/assets/images/ofidkid-crew-banner-01.jpg" alt="Ad Banner"
-								style="max-width: 100%; height: auto;">
-							</a>
-						</div>
-					</section>
-					<tbody>
-						<tr>
-							<td style="text-align: center; vertical-align: middle;">
-								<a href="https://x.com/OFiDTales">
-									<img src="/assets/images/social-logo/IMG_1844.png" alt="X Logo"
-										style="max-width: 35%; height: auto; display: block; margin: auto;">
-								</a>
-							</td>
-							<td style="text-align: center; vertical-align: middle;">
-								<a href="https://x.com/OFiDTales">@OFiDTales</a>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-			</section>
+				<section class="community-links">
+					<table>
+						<!-- Ad Banner -->
+						<section id="socials-banner" class="ad-banner">
+							<div style="text-align: center;">
+								<img src="/assets/images/ofidkid-crew-banner-01.jpg" alt="Ad Banner"
+									style="max-width: 100%; height: auto;">
+							</div>
+						</section>
+						<tbody>
+							<tr>
+								<td style="text-align: center; vertical-align: middle;">
+									<a href="https://x.com/OFiDTales">
+										<img src="/assets/images/social-logo/IMG_1844.png" alt="X Logo"
+											style="max-width: 35%; height: auto; display: block; margin: auto;">
+									</a>
+								</td>
+								<td style="text-align: center; vertical-align: middle;">
+									<a href="https://x.com/OFiDTales">@OFiDTales</a>
+								</td>
+							</tr>
+							<tr>
+								<td style="text-align: center; vertical-align: middle;">
+									<a href="https://www.tiktok.com/@ofidtales">
+										<img src="/assets/images/social-logo/tiktok-transparent.png" alt="TikTok Logo"
+											style="max-width: 35%; height: auto; display: block; margin: auto;">
+									</a>
+								</td>
+								<td style="text-align: center; vertical-align: middle;">
+									<a href="https://app.flipchat.xyz/room/350">@OFiDTales</a>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</section>
 				
 				</section>
 			</section>
@@ -439,7 +448,7 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li><a href="/community.html">Community</a></li>
+				<li><a href="/bouncyball.html">Token</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
 				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/pages/about.html">About</a></li>
