Minbor text changes and url updates for OFiDTales TikTok on all pages.

--- a/community.html
+++ b/community.html
@@ -127,7 +127,7 @@
 				</li>
 				<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a>
 				</li>
-				<li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span
+				<li><a href="https://www.tiktok.com/@OFiDTales" class="icon brands alt fa-tiktok"><span
 							class="label">TikTok</span></a></li>
 				<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span
 							class="label">Facebook</span></a></li>
@@ -182,7 +182,7 @@
 								clutter. Simple ideas, packaged neatly.<br><br>Hey, it has to be this way for the new
 								people we are
 								introducing!
-								<a href="https://twitter.com/OFiDKid?ref_src=twsrc%5Etfw">@OFiDKid</a> is only just
+								<a href="https://twitter.com/OFiDKid?ref_src=twsrc%5Etfw">@OFiDTales</a> is only just
 								getting
 								started!<br><br>Safe, educational, fun and supporting of others.… <a
 									href="https://t.co/1QBoOKJqkd">https://t.co/1QBoOKJqkd</a> <a
@@ -264,9 +264,9 @@
 							<div class="box-content">
 								<span class="image"><img src="assets/images/ofid-locals.jpg"
 										alt="OFiD Locals Logo"></span>
-								<h3>We Support Each Other Locally</h3>
-								<p>The OFiD Locals program makes learning about Web3 approachable by connecting you with
-									close friends, local community groups, and <a href="https://www.facebook.com/groups/ofidcrypt/" target="_blank">Facebook</a>. 
+								<h3>We Promote Web3 Locally</h3>
+								<p>The OFiD Locals program makes learning about Web3 feel "close to home" by promoting in
+									local community groups and coming together through our <a href="https://www.facebook.com/groups/ofidcrypt/" target="_blank">Facebook</a> page.
 									Discover new opportunities safely and spark conversations in our social channels!</p>
 							</div>
 							<button class="scroll-arrow right" aria-label="Scroll Right"><i
@@ -610,7 +610,7 @@
 					<ul class="icons alt">
 						<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span
 									class="label">X</span></a></li>
-						<li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span
+						<li><a href="https://www.tiktok.com/@OFiDTales" class="icon brands alt fa-tiktok"><span
 									class="label">TikTok</span></a></li>
 						<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span
 									class="label">Facebook</span></a></li>
