--- a/explore/app-featured-hvr.html
+++ b/explore/app-featured-hvr.html
@@ -128,7 +128,7 @@
 					</li>
 					<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a>
 					</li>
-					<li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span
+					<li><a href="https://www.tiktok.com/@OFiDTales" class="icon brands alt fa-tiktok"><span
 								class="label">TikTok</span></a></li>
 					<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span
 								class="label">Facebook</span></a></li>
@@ -280,7 +280,7 @@
 					<ul class="icons alt">
 						<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span
 									class="label">X</span></a></li>
-						<li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span
+						<li><a href="https://www.tiktok.com/@OFiDTales" class="icon brands alt fa-tiktok"><span
 									class="label">TikTok</span></a></li>
 						<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span
 									class="label">Facebook</span></a></li>
@@ -294,7 +294,7 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li><a href="../community.html">Community</a></li>
+				<li><a href="../bouncyball.html">Token</a></li>
 				<li><a href="../docs/main.html">Docs</a></li>
 				<li><a href="../pages/affiliate.html">Partners</a></li>
 				<li><a href="../pages/about.html">About</a></li>
