--- a/bouncyball.html
+++ b/bouncyball.html
@@ -121,7 +121,7 @@
 					</a>
 				</li>
 				  <li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
-				  <li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
+				  <li><a href="https://www.tiktok.com/@OFiDTales" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
 				  <li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 				  <li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 			</ul>
