Updates OpenGraph image and header image on token page and some minor text changes.

--- a/bouncyball.html
+++ b/bouncyball.html
@@ -43,15 +43,15 @@
 	<!-- Open Graph Meta Tags -->
 	<meta property="og:title" content="e𝕏PB Bouncy Ball | OFiDCrypt">
 	<meta property="og:description" content="Tune in to OFiDCrypt to check the price of the e𝕏PB Token.">
-	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
+	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-expb-bouncyball.webp">
 	<meta property="og:url" content="https://www.ofidcrypt.com/bouncyball">
 	<meta property="og:type" content="website">
 
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="e𝕏PB Chart DEX Screener | OFiDCrypt">
+	<meta name="twitter:title" content="e𝕏PB Bouncy Ball | OFiDCrypt">
 	<meta name="twitter:description" content="Tune in to OFiDCrypt to check the price of the e𝕏PB Token.">
-	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
+	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-expb-bouncyball.webp">
 	<meta name="twitter:url" content="https://www.ofidcrypt.com/bouncyball">
 
 	<!-- Default ICO file with multiple sizes -->
@@ -90,7 +90,7 @@
 		<!-- Header Subpage-->
 		<header class="header-subpage">
 			<a href="/index.html">
-				<img src="/assets/images/logo01.png" alt="OFiDCrypt Logo" class="logo">
+				<img src="/assets/images/ofid-expb-logo.png" alt="OFiDCrypt Logo" class="logo">
 			</a>
 		</header>
 
@@ -177,7 +177,7 @@
 					<!-- Video 1 - TikTok Embed -->
 					<div class="tiktok-video-wrapper">
 						<header class="tiktok-header">
-							<h2>Come Check This</h2>
+							<h2>Bulletins</h2>
 						</header>
 						<div class="tiktok video main">
 							<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@ofidcrypt/video/7504411238621924663"
