Updated OpenGraph images for index, about, bouncyball and some other text changes for consistency.

--- a/bouncyball.html
+++ b/bouncyball.html
@@ -43,7 +43,7 @@
 	<!-- Open Graph Meta Tags -->
 	<meta property="og:title" content="e𝕏PB Bouncy Ball | OFiDCrypt">
 	<meta property="og:description" content="Tune in to OFiDCrypt to check the price of the e𝕏PB Token.">
-	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-expb-bouncyball.webp">
+	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-expb-bouncy.webp">
 	<meta property="og:url" content="https://www.ofidcrypt.com/bouncyball">
 	<meta property="og:type" content="website">
 
@@ -51,7 +51,7 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="e𝕏PB Bouncy Ball | OFiDCrypt">
 	<meta name="twitter:description" content="Tune in to OFiDCrypt to check the price of the e𝕏PB Token.">
-	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-expb-bouncyball.webp">
+	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-expb-bouncy.webp">
 	<meta name="twitter:url" content="https://www.ofidcrypt.com/bouncyball">
 
 	<!-- Default ICO file with multiple sizes -->
@@ -106,7 +106,7 @@
 				<li><a href="explore.html">Explore</a></li>
 				<li><a href="community.html">Community</a></li>
 				<li><a href="pages/livestream.html">e𝕏P Streams™</a></li>
-				<li><a href="ofidkid.html">The OFiD Kid</a></li>
+				<li><a href="ofidkid.html">OFiD Tales</a></li>
 				<li><a href="pages/about.html">About</a></li>
 			</ul>
 			<ul class="icons">
