--- a/explore.html
+++ b/explore.html
@@ -45,8 +45,8 @@
 	<meta property="og:title" content="OFiDCrypt | Web3 Discovery Apps & Services">
 	<meta property="og:description"
 		content="Explore Web3 in this exciting hub of leading applications by top developers in the space! Try new experiences and become empowered by the privacy and freedom of decentralized services.">
-	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
-	<meta property="og:url" content="https://www.ofidcrypt.com">
+	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofidcrypt-marketing.webp">
+	<meta property="og:url" content="https://www.ofidcrypt.com/explore">
 	<meta property="og:type" content="website">
 
 	<!-- Twitter Card Meta Tags -->
@@ -54,8 +54,8 @@
 	<meta name="twitter:title" content="OFiDCrypt | Web3 Discovery Apps & Services">
 	<meta name="twitter:description"
 		content="Explore Web3 in this exciting hub of leading applications by top developers in the space! Try new experiences and become empowered by the privacy and freedom of decentralized services.">
-	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
-	<meta name="twitter:url" content="https://www.ofidcrypt.com">
+	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofidcrypt-marketing.webp">
+	<meta name="twitter:url" content="https://www.ofidcrypt.com/explore">
 
 	<!-- Partner Verification Meta Tags -->
 	<meta property="hvr-site-verification" content="1335145fefe220df614f86a7b0d3605d">
@@ -113,7 +113,7 @@
 				<li class="active"><a href="explore.html">Explore</a></li>
 				<li><a href="community.html">Community</a></li>
 				<li><a href="pages/livestream.html">e𝕏P Streams™</a></li>
-				<li><a href="ofidkid.html">The OFiD Kid</a></li>
+				<li><a href="ofidkid.html">OFiD Tales</a></li>
 				<li><a href="pages/about.html">About</a></li>
 			</ul>
 			<ul class="icons">
