--- a/cashlinks.html
+++ b/cashlinks.html
@@ -105,7 +105,7 @@
 					<li><a href="explore.html">Explore</a></li>
 					<li><a href="community.html">Community</a></li>
 					<li><a href="pages/livestream.html">e𝕏P Streams™</a></li>
-					<li><a href="ofidkid.html">The OFiD Kid</a></li>
+					<li><a href="ofidkid.html">OFiD Tales</a></li>
 					<li><a href="pages/about.html">About</a></li>
 				</ul>
 
