--- a/explore/app-featured-hvr.html
+++ b/explore/app-featured-hvr.html
@@ -111,7 +111,7 @@
 					<li class="active"><a href="../explore.html">Explore</a></li>
 					<li><a href="../community.html">Community</a></li>
 					<li><a href="../pages/livestream.html">e𝕏P Streams™</a></li>
-					<li><a href="../ofidkid.html">The OFiD Kid</a></li>
+					<li><a href="../ofidkid.html">OFiD Tales</a></li>
 					<li><a href="../pages/about.html">About</a></li>
 				</ul>
 				<ul class="icons">
