--- a/pages/about.html
+++ b/pages/about.html
@@ -47,7 +47,7 @@
 	<meta property="og:title" content="Our Web3 Mission | About OFiDCrypt">
 	<meta property="og:description"
 		content="We can introduce you to the world of web3, leveraging tailored articles, live events, and simple partner apps as entry points. You can then choose to get crypto at your own pace and learn and grow with the community.">
-	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
+	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofidcrypt-marketing.webp">
 	<meta property="og:url" content="https://www.ofidcrypt.com/pages/about">
 	<meta property="og:type" content="website">
 
@@ -56,7 +56,7 @@
 	<meta name="twitter:title" content="Our Web3 Mission | About OFiDCrypt">
 	<meta name="twitter:description"
 		content="We can introduce you to the world of web3, leveraging tailored articles, live events, and simple partner apps as entry points. You can then choose to get crypto at your own pace and learn and grow with the community.">
-	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
+	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofidcrypt-marketing.webp">
 	<meta name="twitter:url" content="https://www.ofidcrypt.com/pages/about">
 
 	<!-- Default ICO file with multiple sizes -->
@@ -111,7 +111,7 @@
 				<li><a href="../explore.html">Explore</a></li>
 				<li><a href="../community.html">Community</a></li>
 				<li><a href="livestream.html">e𝕏P Streams™</a></li>
-				<li><a href="../ofidkid.html">The OFiD Kid</a></li>
+				<li><a href="../ofidkid.html">OFiD Tales</a></li>
 				<li class="active"><a href="about.html">About</a></li>
 			</ul>
 			<ul class="icons">
