--- a/bouncyball.html
+++ b/bouncyball.html
@@ -103,7 +103,7 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="explore.html">Explore</a></li>
+				<li><a href="explore.html">Services</a></li>
 				<li><a href="community.html">Community</a></li>
 				<li><a href="pages/livestream.html">e𝕏P Streams™</a></li>
 				<li><a href="ofidkid.html">OFiD Tales</a></li>
