--- a/explore/app-featured-hvr.html
+++ b/explore/app-featured-hvr.html
@@ -108,7 +108,7 @@
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="../index.html">Home</a></li>
-					<li class="active"><a href="../explore.html">Explore</a></li>
+					<li class="active"><a href="../explore.html">Services</a></li>
 					<li><a href="../community.html">Community</a></li>
 					<li><a href="../pages/livestream.html">e𝕏P Streams™</a></li>
 					<li><a href="../ofidkid.html">OFiD Tales</a></li>
