--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -105,7 +105,7 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href="../index.html">Home</a></li>
-				<li><a href="../explore.html">Explore</a></li>
+				<li><a href="../explore.html">Services</a></li>
 				<li><a href="../community.html">Community</a></li>
 				<li class="active"><a href="livestream.html">e𝕏P Streams™</a></li>
 				<li><a href="../ofidkid.html">OFiD Tales</a></li>
