--- a/promote.html
+++ b/promote.html
@@ -283,8 +283,8 @@
 					<span class="date">Promotional Services</span>
 					<h1>e𝕏P Promote</h1>
 					<p>You can grow with us even if you don't promote with us; just hold <a href="/bouncyball.html">Bouncy
-							Ball</a> and sit tight as we extend our reach accross Canada! Our clients also have the option to be
-						listed on our <a href="/promote/client-directory.html">clientdirectory</a> for our members to browse.</p>
+							Ball</a> and sit tight as we extend our reach accross Canada! Our clients also have the option to get
+						listed on our <a href="/promote/client-directory.html">Client Directory Page</a> for visitors to browse.</p>
 
 					<!-- Apps & Learn Buttons -->
 					<div class="round-button-container">
