--- a/promote/client-directory.html
+++ b/promote/client-directory.html
@@ -170,7 +170,7 @@
 						</thead>
 						<tbody>
 							<tr>
-								<td><a href="#footer">[Name Here]</Name>></a></td>
+								<td><a href="#footer">[Name Here]</a></td>
 								<td>#</td>
 								<td><a href="#footer">Report</a></td>
 							</tr>
