--- a/promote/client-directory.html
+++ b/promote/client-directory.html
@@ -155,7 +155,7 @@
 					<span class="date">OFiDCrypt e𝕏P Web3™</span>
 					<h1>Client<br />
 						Directory</h1>
-					<p>Our cliebts have the choice to opt in and promote their brand and services here.</p>
+					<p>Our customers have the choice to opt in and advertise their brand and services here.</p>
 				</header>
 			
 				<!-- Community Links Table -->
@@ -163,7 +163,7 @@
 					<table>
 						<thead>
 							<tr>
-								<th>Title</th>
+								<th>Company</th>
 								<th>Service Keywords</th>
 								<th>Report Broken Link</th>
 							</tr>
@@ -250,7 +250,7 @@
 							<input type="email" name="email" id="email" required>
 						</div>
 						<div class="field">
-							<label for="message">Copy & Paste URL</label>
+							<label for="message">Copy & Paste Company</label>
 							<textarea name="message" id="message" rows="3" required></textarea>
 						</div>
 					</div>
