--- a/explore.html
+++ b/explore.html
@@ -286,7 +286,7 @@
 				<header class="major">
 					<span class="date">OFiDCrypt Services</span>
 					<h1>Web3 <br /> Discovery</h1>
-					<p>Check out Apps from leading innovators in the web3 space, promote with us or explore our library of
+					<p>Check out apps from leading innovators in the web3 space, promote with us or explore our library of
 						knowledge articles; written and published by OFiDCrypt.</p>
 
 					<!-- Apps & Learn Buttons -->
