Added page ofidtales.html and divided content between ofidkid and ofidtales with linking in between.

--- a/promote/client-directory.html
+++ b/promote/client-directory.html
@@ -110,7 +110,7 @@
 				<li class="active"><a href="../explore.html">Services</a></li>
 				<li><a href="../community.html">Community</a></li>
 				<li><a href="../pages/livestream.html">e𝕏P Streams™</a></li>
-				<li><a href="../ofidkid.html">OFiD Tales</a></li>
+				<li><a href="../ofidtales.html">OFiD Tales</a></li>
 				<li><a href="../pages/about.html">About</a></li>
 			</ul>
 			<ul class="icons">
@@ -155,7 +155,7 @@
 					<span class="date">OFiDCrypt e𝕏P Web3™</span>
 					<h1>Client<br />
 						Directory</h1>
-					<p>Our customers have the choice to opt in and advertise their brand and services here.</p>
+					<p>Explore the brands and services of customers we've worked with—an optional collaborative service provided by OFiDCrypt.</p>
 				</header>
 			
 				<!-- Community Links Table -->
@@ -163,7 +163,7 @@
 					<table>
 						<thead>
 							<tr>
-								<th>Company</th>
+								<th>Company Name</th>
 								<th>Service Keywords</th>
 								<th>Report Broken Link</th>
 							</tr>
@@ -242,7 +242,7 @@
 					<h2 class="centered-heading">Report Broken Link</h2>
 					<div class="fields">
 						<div class="field">
-							<label for="name">Name</label>
+							<label for="name">Your Name</label>
 							<input type="text" name="name" id="name" required>
 						</div>
 						<div class="field">
@@ -250,7 +250,7 @@
 							<input type="email" name="email" id="email" required>
 						</div>
 						<div class="field">
-							<label for="message">Copy & Paste Company</label>
+							<label for="message">Copy & Paste Company Name</label>
 							<textarea name="message" id="message" rows="3" required></textarea>
 						</div>
 					</div>
