--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -107,7 +107,7 @@
 							<li><a href="../explore.html">Services</a></li>
 							<li><a href="../community.html">Community</a></li>
 							<li><a href="livestream.html">e𝕏P Streams™</a></li>
-							<li><a href="../ofidkid.html">OFiD Tales</a></li>
+							<li><a href="../ofidtales.html">OFiD Tales</a></li>
 							<li><a href="about.html">About</a></li>
 						</ul>
 						<ul class="icons">
