--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -108,7 +108,7 @@
 				<li><a href="../explore.html">Services</a></li>
 				<li><a href="../community.html">Community</a></li>
 				<li class="active"><a href="livestream.html">e𝕏P Streams™</a></li>
-				<li><a href="../ofidkid.html">OFiD Tales</a></li>
+				<li><a href="../ofidtales.html">OFiD Tales</a></li>
 				<li><a href="about.html">About</a></li>
 			</ul>
 			<ul class="icons">
